2014-11-21  Darryl McClymont  <darryl.mcclymont@gmail.com>

	* matlab/CardiacToolbox/fit_DT.m: (0.1.2)

	- Fixed minor bug, program crashed without all output arguments.

	* Add matlab/FiltersToolbox/forward_TV.m: (0.1.1)
	* Add matlab/FiltersToolbox/forward_TV_2D.m: (0.1.1)
	* Add matlab/FiltersToolbox/inverse_TV.m: (0.1.1)
	* Add matlab/FiltersToolbox/inverse_TV_2D.m: (0.1.1)
	* Add matlab/FiltersToolbox/forward_TV_mex.cpp: (0.1.1)

	- Functions to do forward/inverse total variation transforms, very common in 		reconstruction algorithms as a spatial regulariser. Essentially just finite 		differences in x,y, and z.

2014-11-07  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/histology_blockface_manual_correction.m: (0.1.0)

	- HISTOLOGY_BLOCKFACE_MANUAL_CORRECTION Manual landmark correction
	of 3D histology volume to match blockface volume.

2014-11-05  Ramon Casero  <rcasero@gmail.com>

	* Add matlab/CardiacToolbox/histology_blockface_reg.m: (0.1.0)

	- HISTOLOGY_BLOCKFACE_REG Register deformed histology volume to
	blockface.

2014-11-05  Jo Bates <jobates81@gmail.com>

	* Add smoldyn2matlab(0.1.0)

	- converts Smoldyn molecule trajectory into Matlab format

2014-11-05  Christopher Kelly  <christopher.kelly28@gmail.com>

	* Add matlab/ThirdPartyToolbox/loaddcmdir.m,
	* Add matlab/ThirdPartyToolbox/license-loaddcmdir.txt:

	- add loaddcmdir.m function by Laszlo Balkay, last updated 05 Oct
	2011,

	- reads metadata from DICOMDIR file and shows list of the
	different DICOM SERIES in Pop-up menus

	http://www.mathworks.co.uk/matlabcentral/fileexchange/7926-dicomdir-reader

2014-11-04  Ramon Casero  <rcasero@gmail.com>

	* Add test/test_skeleton_label.m: (0.1.0)

	- Test script for skeleton_label.m.

	- First script that generates images to be included in the wiki as
	documentation.

2014-11-03  Ramon Casero  <rcasero@gmail.com>

	* matlab/ItkToolbox/elastix.m: (0.4.2)

	- Fix bug. Other functions expect the intial transform to be